--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,10 @@
             border-bottom: solid 1px;
             border-collapse: collapse;
             vertical-align: center;
-            padding: 5px;
+            padding-top: 0px;
+            padding-bottom: 0px;
+            padding-left: 5px;
+            padding-right: 5px;
          }
 
          .tblleft
@@ -110,7 +113,7 @@
             margin-right: 2px;
             float: right;
             width: 99px;
-            height: 32px;
+            height: 12px;
             background-image: url('/images/button_active.png');
             background-repeat: no-repeat;
             background-position: bottom center;
@@ -118,7 +121,7 @@
             text-align: center;
             text-decoration: none;
             font-size: medium;
-            line-height: 40px;
+            line-height: 0px;
          }
          
          a.navbut
@@ -141,6 +144,5 @@
             text-align: left;
          }
       </style>
-<!--#include file="_head.shtml"-->
    </head>
 
