--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,14 @@
       <div>
          <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" width="100%%">
             <tr class="trnavbar">
-               <td width="10%%">
+<!--
+               <td width="15%%">
                   <p align="center">
-                     Welcome to Homerow.net
+                     Welcome to homerow.net
                   </p>
                </td>
-               <td width="90%%">
+-->
+               <td width="85%%">
                   <p class="navtxt">
                      <a class="navbutact" href="/zvm">z/VM</a>                     
                      <a class="navbutact" href="/zlinux">zLinux</a>
