--- a/_includes/head.html
+++ b/_includes/head.html
@@ -111,7 +111,7 @@
          {
             padding-top: 20px;
             margin-right: 2px;
-            float: right;
+            float: left;
             width: 99px;
             height: 12px;
             background-image: url('/images/button_active.png');
