--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
                <td width="20" height="29">
                   <img border="0" src="/images/index.1.gif" width="20" height="29" alt="top left"/>
                </td>
-               <td width="740" height="29" class="tdtopborder">
+               <td class="tdtopborder" width="740" height="29">
                   &nbsp;
                </td>
                <td width="20" height="29" align="right">
@@ -29,7 +29,7 @@ layout: default
                <td width="20" height="29">
                   <img border="0" src="/images/index.2.gif" width="20" height="29" alt="bottom left"/>
                </td>
-               <td width="740" height="29" class="tdbotborder">
+               <td class="tdbotborder" width="740" height="29">
                   &nbsp;
                </td>
                <td width="20" height="29" align="right">
