Fix google indexing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
                         {% elsif nodes[1] == base %}
                            {% assign act = 'act' %}
                         {% endif %}
-                        <a class="navbut{{act}}" href="/{{base}}">{{cat}}</a>
+                        <a class="navbut{{act}}" href="/{{base}}/">{{cat}}</a>
                      {% endfor %}
                   </p>
                </td>
