--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,11 +6,11 @@
                </td>
                <td width="760">
                   <p class="footer">
-                     <a href="/about" style="{text-decoration: none;}">
+                     <a href="/about/" style="{text-decoration: none;}">
                         About
                      </a>
                      &nbsp;&bull;&nbsp;
-                     <a href="/disclaim" style="{text-decoration: none;}">
+                     <a href="/disclaim/" style="{text-decoration: none;}">
                         Disclaimer
                      </a>
                   </p>
