--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,8 +19,9 @@
                            {% assign act = 'act' %}
                         {% elsif nodes[1] == base %}
                            {% assign act = 'act' %}
+                           {% assign base = '{{base}}/' %}
                         {% endif %}
-                        <a class="navbut{{act}}" href="/{{base}}/">{{cat}}</a>
+                        <a class="navbut{{act}}" href="/{{base}}">{{cat}}</a>
                      {% endfor %}
                   </p>
                </td>
